fixed spacing

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1604,12 +1604,14 @@
 	}
 
 	body, input, select, textarea {
-		color: #777;
-		font-family: "Source Sans Pro", sans-serif;
+		font-family: sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
 		line-height: 1.65em;
 		letter-spacing: -0.015em;
+	}
+	textarea {
+		font-size: 14pt;
 	}
 
 	a {
@@ -2855,7 +2857,6 @@
 		#cta input[type="email"],
 		#cta select,
 		#cta textarea {
-			color: #ffffff;
 			background: rgba(255, 255, 255, 0.15);
 			border: 0;
 		}
